# LeHaMoC

./: .gitignore  Code Performance & Accuracy  README.md  pyproject.toml  requirements.yml
Code Perfomance and Accuracy/: Code Performance.ipynb  Code_Perf.py
Fit_emcee/: Code.py  OUsed_5BZBJ09553551-11jan2020.txt  Parameters.txt  README.md  SED_fermi_data.txt  fit_emcee.py  plot_emcee.py
LeHaMoC Code and Tests/: BH_spec_E_p24_C_C.txt  LeHaMoC.py  LeHaMoC_f.py  Parameters.txt  Phi_e-nu_e_K&A.txt  Phi_g_K&A.txt  Phi_g_leptons_K&A.txt  Photons_test_4_new.txt  Protons_spec_new_test4.txt  README.md  Tests.ipynb  cross_section.csv  el_spec_E_p24_C_C.txt  f(xi).csv  kp_pg.txt  neutrino_spec_obs_test4.txt  nu_spec_E_p24_C_C.txt  ph_spec_E_p24_C_C.txt  pi0_spec_E_p24_C_C.txt  pr_spec_E_p24_C_C.txt
LeMoC/: LeHaMoC_f.py  LeMoC.py  LeMoC_backup.py  LeMoC_f.py  Parameters.txt  Parameters_Test1.txt  Parameters_Test3.txt  Plotting_Tool.ipynb  README.md  Test_1_el_dis_W_SSA.txt  Test_1_pair_inj_W_SSA.txt  Test_1_ph_dis_W_SSA.txt  __init__.py  console.py  constants.py  simulation_params.py  zkd_example.py
LeMoC/.ipynb_checkpoints/: Plotting_Tool-checkpoint.ipynb
LeMoC/params/: test_params.txt
LeMoC/tables/: Particles_Distribution_Test1_LeMoC.txt  Particles_Distribution_Test3_LeMoC.txt  Photons_Distribution_Test1_LeMoC.txt  Photons_Distribution_Test3_LeMoC.txt
